laying out foundation

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 
   <head>
     <meta charset="utf-8">
-    <title>My Final Project</title>
+    <title>Goal!</title>
     <meta name="author" content="Edwin Islas Aguirre">
-
-      
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
   </head>
 
 <body>
   <header>
-    <h1 class="page-title">My Awesome Website</h1>
-    <p>This is some awesome text.</p>
+    <h1 class="page-title">DONT TOUCH THE LAVA</h1>
   </header>
+
+  <canvas id="myCanvas" width="580" height="420"></canvas>
+
 
   <script src="scripts/main.js"></script>
 </body>
