--- a/index.html
+++ b/index.html
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Goal!</title>
-    <meta name="author" content="Edwin Islas Aguirre">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="stylesheets/styles.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Musiqu'd.com</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="stylesheets/styles.css">
+</head>
 
 <body>
-  <header>
-    <h1 class="page-title">DONT TOUCH THE LAVA</h1>
+  <header class="main-header">
+    <h1 class="logo-text">Musiqu'd</h1>
   </header>
+  <main class="main-content">
+    <ul class="thumbnail-list">
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="Stayin' Alive" data-image-url="img/otter1.jpg">
+          <img class="thumbnail-image" img src="img/otter1.jpg" alt="Drake the Otter">
+          <span class="thumbnail-title">Drake</span>
+        </a>
+      </li>
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="California Dreamin'" data-image-url="img/otter2.jpg">
+          <img class="thumbnail-image" img src="img/otter2.jpg" alt="Blake the Otter">
+          <span class="thumbnail-title">Blake</span>
+        </a>
+      </li>
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="Little Deuce Coop" data-image-url="img/otter3.jpg">
+          <img class="thumbnail-image" img src="img/otter3.jpg" alt="Flake the Otter">
+          <span class="thumbnail-title">Flake</span>
+        </a>
+      </li>
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="Purple Rain" data-image-url="img/otter4.jpg">
+          <img class="thumbnail-image" img src="img/otter4.jpg" alt="Yake the Otter">
+          <span class="thumbnail-title">Yake</span>
+        </a>
+      </li>
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="Hey Jude" data-image-url="img/otter5.jpg">
+          <img class="thumbnail-image" img src="img/otter5.jpg" alt="Kake the Otter">
+          <span class="thumbnail-title">Kake</span>
+        </a>
+      </li>
+    </ul>
 
-  <canvas id="myCanvas" width="580" height="420"></canvas>
-
-
-  <script src="scripts/main.js"></script>
+    <div class="detail-image-container">
+      <div class="detail-image-frame" data-image-role="frame">
+        <img class="detail-image" data-image-role="target" src="img/otter1.jpg" alt="">
+        <span class="detail-image-title" data-image-role="title">Stayin' Alive</span>
+      </div>
+    </div>
+  </main>
+  <script src="scripts/main.js" charset="utf-8"></script>
 </body>
+
 </html>
