added images plus changes

--- a/index.html
+++ b/index.html
@@ -16,41 +16,41 @@
   <main class="main-content">
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Stayin' Alive" data-image-url="img/otter1.jpg">
-          <img class="thumbnail-image" img src="img/otter1.jpg" alt="Drake the Otter">
-          <span class="thumbnail-title">Drake</span>
+        <a href="#" data-image-role="trigger" data-image-title="Prime Time Of Your Life" data-image-url="img/DaftPunk.jpg">
+          <img class="thumbnail-image" img src="img/DaftPunk.jpg" alt="Daft Punk">
+          <span class="thumbnail-title">Daft Punk</span>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="California Dreamin'" data-image-url="img/otter2.jpg">
-          <img class="thumbnail-image" img src="img/otter2.jpg" alt="Blake the Otter">
-          <span class="thumbnail-title">Blake</span>
+        <a href="#" data-image-role="trigger" data-image-title="Red Light Moments" data-image-url="img/bladee.jpg">
+          <img class="thumbnail-image" img src="img/bladee.jpg" alt="Bladee">
+          <span class="thumbnail-title">Bladee</span>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Little Deuce Coop" data-image-url="img/otter3.jpg">
-          <img class="thumbnail-image" img src="img/otter3.jpg" alt="Flake the Otter">
-          <span class="thumbnail-title">Flake</span>
+        <a href="#" data-image-role="trigger" data-image-title="Who Dat Boy" data-image-url="img/tylerthecreator.jpg">
+          <img class="thumbnail-image" img src="img/tylerthecreator.jpg" alt="Tyler, the Creator">
+          <span class="thumbnail-title">Tyler, the Creator</span>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Purple Rain" data-image-url="img/otter4.jpg">
-          <img class="thumbnail-image" img src="img/otter4.jpg" alt="Yake the Otter">
-          <span class="thumbnail-title">Yake</span>
+        <a href="#" data-image-role="trigger" data-image-title="Walking On The Rhythm" data-image-url="img/fishmans.jpg">
+          <img class="thumbnail-image" img src="img/fishmans.jpg" alt="Fishmans">
+          <span class="thumbnail-title">Fishmans</span>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Hey Jude" data-image-url="img/otter5.jpg">
-          <img class="thumbnail-image" img src="img/otter5.jpg" alt="Kake the Otter">
-          <span class="thumbnail-title">Kake</span>
+        <a href="#" data-image-role="trigger" data-image-title="Hey Jude" data-image-url="img/jpegmafia.jpg">
+          <img class="thumbnail-image" img src="img/jpegmafia.jpg" alt="JPEGMAFIA">
+          <span class="thumbnail-title">JPEGMAFIA</span>
         </a>
       </li>
     </ul>
 
     <div class="detail-image-container">
       <div class="detail-image-frame" data-image-role="frame">
-        <img class="detail-image" data-image-role="target" src="img/otter1.jpg" alt="">
-        <span class="detail-image-title" data-image-role="title">Stayin' Alive</span>
+        <img class="detail-image" data-image-role="target" src="img/DaftPunk.jpg" alt="">
+        <span class="detail-image-title" data-image-role="title">Prime Time Of Your Life</span>
       </div>
     </div>
   </main>
