changes to index and css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <main class="main-content">
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="Welcome to Musiqu'd" data-image-url="img/DaftPunk.jpg" data-image-text="beep boop">
+          <img class="thumbnail-image" img src="img/DaftPunk.jpg" alt="Daft Punk">
+          <span class="thumbnail-title">Welcome to musiqu'd!</span>
+          </a>
+      </li>
+      <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="Prime Time Of Your Life" data-image-url="img/DaftPunk.jpg">
           <img class="thumbnail-image" img src="img/DaftPunk.jpg" alt="Daft Punk">
           <span class="thumbnail-title">Daft Punk</span>
@@ -40,7 +46,7 @@
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Hey Jude" data-image-url="img/jpegmafia.jpg">
+        <a href="#" data-image-role="trigger" data-image-title="Hazard Duty Pay" data-image-url="img/jpegmafia.jpg">
           <img class="thumbnail-image" img src="img/jpegmafia.jpg" alt="JPEGMAFIA">
           <span class="thumbnail-title">JPEGMAFIA</span>
         </a>
