many many changes to my final project, not done

--- a/index.html
+++ b/index.html
@@ -11,54 +11,67 @@
 
 <body>
   <header class="main-header">
-    <h1 class="logo-text">Musiqu'd</h1>
+    <h1 class="page-title">Musiqu'd!</h1>
   </header>
   <main class="main-content">
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Welcome to Musiqu'd" data-image-url="img/DaftPunk.jpg" data-image-text="beep boop">
-          <img class="thumbnail-image" img src="img/DaftPunk.jpg" alt="Daft Punk">
-          <span class="thumbnail-title">Welcome to musiqu'd!</span>
-          </a>
-      </li>
-      <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Prime Time Of Your Life" data-image-url="img/DaftPunk.jpg">
-          <img class="thumbnail-image" img src="img/DaftPunk.jpg" alt="Daft Punk">
+        <a href="#" data-image-role="trigger" data-image-title="Daft Punk" data-image-url="img/DaftPunk.jpg"
+        data-image-description=".">
           <span class="thumbnail-title">Daft Punk</span>
+          <a href="daftpunk.html">learn more about the artist!</a>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Red Light Moments" data-image-url="img/bladee.jpg">
-          <img class="thumbnail-image" img src="img/bladee.jpg" alt="Bladee">
+        <a href="#" data-image-role="trigger" data-image-title="Bladee" data-image-url="img/Bladee.jpg"
+        data-image-description=".">
           <span class="thumbnail-title">Bladee</span>
+          <a href="bladee.html">learn more about the artist</a>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Who Dat Boy" data-image-url="img/tylerthecreator.jpg">
-          <img class="thumbnail-image" img src="img/tylerthecreator.jpg" alt="Tyler, the Creator">
+        <a href="#" data-image-role="trigger" data-image-title="Tyler, the Creator" data-image-url="img/tylerthecreator.jpg"
+        data-image-description=".">
           <span class="thumbnail-title">Tyler, the Creator</span>
+          <a href="tylerthecreator.html">learn more about the artist</a>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Walking On The Rhythm" data-image-url="img/fishmans.jpg">
-          <img class="thumbnail-image" img src="img/fishmans.jpg" alt="Fishmans">
+        <a href="#" data-image-role="trigger" data-image-title="Fishmans" data-image-url="img/fishmans.jpg"
+          data-image-description=".">
           <span class="thumbnail-title">Fishmans</span>
+          <a href="fishmans.html">learn more about the artist</a>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Hazard Duty Pay" data-image-url="img/jpegmafia.jpg">
-          <img class="thumbnail-image" img src="img/jpegmafia.jpg" alt="JPEGMAFIA">
+        <a href="#" data-image-role="trigger" data-image-title="JPEGMAFIA" data-image-url="img/jpegmafia.jpg"
+        data-image-description=".">
           <span class="thumbnail-title">JPEGMAFIA</span>
+          <a href="jpegmafia.html">learn more about the artist</a>
+            
+          </a>
         </a>
       </li>
     </ul>
+    <div class="image-description">
+      <div class="detail-image-container">
+        <div class="detail-image-frame" data-image-role="frame">
+          <span class="detail-image-title" data-image-role="title"></span>
+          <img class="detail-image" data-image-role="target" src="img/DaftPunk.jpg" alt="">
+          <span class="detail-image-description">
+            Music'q is a website that gives imformation about my favorite artists! 
+              Please enjoy and take your time to look around!
+          </span>
+        </div>
+      </div>
 
-    <div class="detail-image-container">
-      <div class="detail-image-frame" data-image-role="frame">
-        <img class="detail-image" data-image-role="target" src="img/DaftPunk.jpg" alt="">
-        <span class="detail-image-title" data-image-role="title">Prime Time Of Your Life</span>
+      <div class="description-container">
+        <div class="description-frame">
+          <span class="description" data-image-role="description">.</span>
+        </div>
       </div>
     </div>
+
   </main>
   <script src="scripts/main.js" charset="utf-8"></script>
 </body>
