--- a/daftpunk.html
+++ b/daftpunk.html
@@ -10,11 +10,44 @@
 </head>
 
 <body>
-    <header class="main-header">
-      <h1 class="logo-text">Daft Punk</h1>
-      <ul class = "sidebar">
-        <li class = "fleximage">
-          <a href = "#" class = "sidebarlink" ('History Of Daft Punk', '', '', '', 'images/daftpunk.jpg', 'images/daftpunk.jpg')">
-          <p>History of Daft Punk</p></a>
-          <a href = "#" class = "sidebarlink" ('History Of Daft Punk', '', '', 'images/conmn.jpg', 'img/daftpunk.jpg')">
-            <p>Discography</p></a>
+  <header class="main-header">
+    <h1 class="page-title">Musiqu'd!</h1>
+  </header>
+  <main class="main-content">
+    <ul class="thumbnail-list">
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/youngdaftpunk.jpg"
+        data-image-description="fgdfgdfgkjdgh;kdgj">
+          <span class="thumbnail-title">History Of Daft Punk</span>
+        </a>
+      </li>
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/daftpunkdisco.jpg"
+        data-image-description=".">
+          <span class="thumbnail-title">Discography</span>
+      </li>
+          </a>
+        </a>
+      </li>
+    </ul>
+    <div class="image-description">
+      <div class="detail-image-container">
+        <div class="detail-image-frame" data-image-role="frame">
+          <span class="detail-image-title" data-image-role="title"></span>
+          <img class="detail-image" data-image-role="target" src="img/youngdaftpunk.jpg" alt="">
+          <span class="detail-image-description"></span>
+        </div>
+      </div>
+
+      <div class="description-container">
+        <div class="description-frame">
+          <span class="description" data-image-role="description"></span>
+        </div>
+      </div>
+    </div>
+
+  </main>
+  <script src="scripts/main.js" charset="utf-8"></script>
+</body>
+
+</html>
