--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
 <body>
   <header class="main-header">
-    <h1 class="page-title">Musiqu'd!</h1>
+    <h1 class="logo-text">Musiqu'd!</h1>
   </header>
   <main class="main-content">
     <ul class="thumbnail-list">
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="Daft Punk" data-image-url="img/DaftPunk.jpg"
+        data-image-description="Music'q is a website that gives imformation about my favorite artists! 
+        Please enjoy and take your time to look around!">
+          <span class="thumbnail-title">Welcome to Musiqu'd!</span>
+        </a>
+      </li>
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="Daft Punk" data-image-url="img/DaftPunk.jpg"
         data-image-description=".">
@@ -58,16 +65,14 @@
         <div class="detail-image-frame" data-image-role="frame">
           <span class="detail-image-title" data-image-role="title"></span>
           <img class="detail-image" data-image-role="target" src="img/DaftPunk.jpg" alt="">
-          <span class="detail-image-description">
-            Music'q is a website that gives imformation about my favorite artists! 
-              Please enjoy and take your time to look around!
-          </span>
+          <span class="detail-image-description"></span>
         </div>
       </div>
 
       <div class="description-container">
         <div class="description-frame">
-          <span class="description" data-image-role="description">.</span>
+          <span class="description" data-image-role="description"> Music'q is a website that gives imformation about my favorite artists! 
+            Please enjoy and take your time to look around!</span>
         </div>
       </div>
     </div>
