added html and more images

--- a/daftpunk.html
+++ b/daftpunk.html
@@ -26,6 +26,12 @@
         data-image-description=".">
           <span class="thumbnail-title">Discography</span>
       </li>
+    </li>
+    <li class="thumbnail-item">
+      <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/daftpunkgrammys.jpg"
+      data-image-description=".">
+        <span class="thumbnail-title">Achievements</span>
+    </li>
           </a>
         </a>
       </li>
