--- a/fishmans.html
+++ b/fishmans.html
@@ -10,5 +10,50 @@
 </head>
 
 <body>
-    <header class="main-header">
-      <h1 class="logo-text">Fishmans</h1>
+  <header class="main-header">
+    <h1 class="logo-text">Fishmans</h1>
+  </header>
+  <main class="main-content">
+    <ul class="thumbnail-list">
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/].jpg"
+        data-image-description="fgdfgdfgkjdgh;kdgj">
+          <span class="thumbnail-title">History Of Fishmans</span>
+        </a>
+      </li>
+      <li class="thumbnail-item">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/.jpg"
+        data-image-description=".">
+          <span class="thumbnail-title">Discography</span>
+      </li>
+    </li>
+    <li class="thumbnail-item">
+      <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/b.jpg"
+      data-image-description=".">
+        <span class="thumbnail-title">Achievements</span>
+    </li>
+          </a>
+        </a>
+      </li>
+    </ul>
+    <div class="image-description">
+      <div class="detail-image-container">
+        <div class="detail-image-frame" data-image-role="frame">
+          <span class="detail-image-title" data-image-role="title"></span>
+          <img class="detail-image" data-image-role="target" src="img/.jpg" alt="">
+          <span class="detail-image-description"></span>
+        </div>
+      </div>
+
+      <div class="description-container">
+        <div class="description-frame">
+          <span class="description" data-image-role="description"></span>
+        </div>
+      </div>
+    </div>
+
+  </main>
+  <script src="scripts/main.js" charset="utf-8"></script>
+</body>
+
+</html>
