--- a/jpegmafia.html
+++ b/jpegmafia.html
@@ -16,19 +16,19 @@
   <main class="main-content">
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/].jpg"
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/earlyjpeg.jpg"
         data-image-description="fgdfgdfgkjdgh;kdgj">
           <span class="thumbnail-title">History Of JPEGMAFIA</span>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/.jpg"
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/jpegmafiadiscog.jpg"
         data-image-description=".">
           <span class="thumbnail-title">Discography</span>
       </li>
     </li>
     <li class="thumbnail-item">
-      <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/b.jpg"
+      <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/jpegmafiainfluence.jpg"
       data-image-description=".">
         <span class="thumbnail-title">Achievements</span>
     </li>
@@ -40,7 +40,7 @@
       <div class="detail-image-container">
         <div class="detail-image-frame" data-image-role="frame">
           <span class="detail-image-title" data-image-role="title"></span>
-          <img class="detail-image" data-image-role="target" src="img/.jpg" alt="">
+          <img class="detail-image" data-image-role="target" src="img/earlyjpeg.jpg" alt="">
           <span class="detail-image-description"></span>
         </div>
       </div>
