added one description

--- a/daftpunk.html
+++ b/daftpunk.html
@@ -17,7 +17,12 @@
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/youngdaftpunk.jpg"
-        data-image-description="fgdfgdfgkjdgh;kdgj">
+        data-image-description="Daft Punk are an electronic duo that was formed in 1993 by Thomas Bangalter
+        and Guy-Manuel de Homem-Cristo. Originally they were in an indie rock band called Darlin' but disbanded
+        and eventually experimented in the electronic scene of music. In 1997, they released their debut record 'Homework'
+        which includede the singles of 'Da Funk' and 'Around the World', which were major hits. In 2001, they released their 
+        second album 'Discovery' which had hits such as 'One More Time' and 'Harder, Better, Faster, Stronger' and it has its 
+        own movie that comes along with the music, called 'interstella 5555'. In 2005, they relesed  ">
           <span class="thumbnail-title">History Of Daft Punk</span>
         </a>
       </li>
