almost done w 1 page

--- a/daftpunk.html
+++ b/daftpunk.html
@@ -17,18 +17,23 @@
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/youngdaftpunk.jpg"
-        data-image-description="Daft Punk are an electronic duo that was formed in 1993 by Thomas Bangalter
-        and Guy-Manuel de Homem-Cristo. Originally they were in an indie rock band called Darlin' but disbanded
+        data-image-description="Daft Punk are an electronic duo that was formed in 1993 by Thomas Bangalter (right)
+        and Guy-Manuel de Homem-Cristo (left). Originally they were in an indie rock band called Darlin' but disbanded
         and eventually experimented in the electronic scene of music. In 1997, they released their debut record 'Homework'
         which includede the singles of 'Da Funk' and 'Around the World', which were major hits. In 2001, they released their 
         second album 'Discovery' which had hits such as 'One More Time' and 'Harder, Better, Faster, Stronger' and it has its 
-        own movie that comes along with the music, called 'interstella 5555'. In 2005, they relesed  ">
-          <span class="thumbnail-title">History Of Daft Punk</span>
+        own movie that comes along with the music, called 'interstella 5555'. In 2005, they released their 3rd album 'Human After All'. 
+        They also made the score for Tron: Legacy which released in 2010 before releasing their final album in 2013, called 'Random Access Memories'.
+        Which had the hit single 'Get Lucky'. The album and song were nominated at the 2013 Grammys award for best song of the year and album of the year in which they won. 
+        The weeknd in 2016 collaborated with Daft Punk to give them their only no. 1 on the charts ever. The song was 'Starboy' and also collaborated with them with the song 'I feel it Coming'. 
+        In 2021, they announced their breakup after 28 years of making music together. They are regarded as one of the most influential acts in electronic and dance history, and one of the greatest music duos of all time.">
+          <span class="thumbnail-title">History Of Daft Punk</span> 
         </a>
       </li>
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/daftpunkdisco.jpg"
-        data-image-description=".">
+        data-image-description="The duo has released 4 albums since 1997, those consisting of 'Homework' (top left) released in 1997, 'Discovery' (top right) released in 2001, Human After All (bottom left) released in 2005 
+        and Random Access Memories (bottom right) released in 2013. Their albums tend to have their logo in the covers, or something rather significant that fits into the themes of their albums. They also have two live albums 'Daftendirekt">
           <span class="thumbnail-title">Discography</span>
       </li>
     </li>
