added some changes

--- a/daftpunk.html
+++ b/daftpunk.html
@@ -33,13 +33,16 @@
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/daftpunkdisco.jpg"
         data-image-description="The duo has released 4 albums since 1997, those consisting of 'Homework' (top left) released in 1997, 'Discovery' (top right) released in 2001, Human After All (bottom left) released in 2005 
-        and Random Access Memories (bottom right) released in 2013. Their albums tend to have their logo in the covers, or something rather significant that fits into the themes of their albums. They also have two live albums 'Daftendirekt">
+        and Random Access Memories (bottom right) released in 2013. Their albums tend to have their logo in the covers, or something rather significant that fits into the themes of their albums. They also have two live albums 'Alive' released in 1997 and 'Alive 2007' released in 2007.
+        To see their full discography go here: https://www.discogs.com/artist/1289-Daft-Punk.">
           <span class="thumbnail-title">Discography</span>
       </li>
     </li>
     <li class="thumbnail-item">
       <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/daftpunkgrammys.jpg"
-      data-image-description=".">
+      data-image-description="With their 28 year partnership, you would expect them to win multiple awards no? Well they've been nominated for many awards throughout their time 
+      but have only won 13 awards in the span of 28 years. Winning 6 grammys in the process, those being for their live album, 'Alive 2007' and 'Random Access Memories' (with their song 
+      Get Lucky).">
         <span class="thumbnail-title">Achievements</span>
     </li>
           </a>
