--- a/index.html
+++ b/index.html
@@ -16,43 +16,43 @@
   <main class="main-content">
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Daft Punk" data-image-url="img/DaftPunk.jpg"
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/DaftPunk.jpg"
         data-image-description="Music'q is a website that gives imformation about my favorite artists! 
         Please enjoy and take your time to look around!">
           <span class="thumbnail-title">Welcome to Musiqu'd!</span>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Daft Punk" data-image-url="img/DaftPunk.jpg"
-        data-image-description=".">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/DaftPunk.jpg"
+        data-image-description="here is the artist!">
           <span class="thumbnail-title">Daft Punk</span>
           <a href="daftpunk.html">learn more about the artist!</a>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Bladee" data-image-url="img/Bladee.jpg"
-        data-image-description=".">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/Bladee.jpg"
+        data-image-description="here is the artist!">
           <span class="thumbnail-title">Bladee</span>
           <a href="bladee.html">learn more about the artist</a>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Tyler, the Creator" data-image-url="img/tylerthecreator.jpg"
-        data-image-description=".">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/tylerthecreator.jpg"
+        data-image-description="here is the artist!">
           <span class="thumbnail-title">Tyler, the Creator</span>
           <a href="tylerthecreator.html">learn more about the artist</a>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="Fishmans" data-image-url="img/fishmans.jpg"
-          data-image-description=".">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/fishmans.jpg"
+          data-image-description="here is the artist!">
           <span class="thumbnail-title">Fishmans</span>
           <a href="fishmans.html">learn more about the artist</a>
         </a>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="JPEGMAFIA" data-image-url="img/jpegmafia.jpg"
-        data-image-description=".">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/jpegmafia.jpg"
+        data-image-description="here is the artist!">
           <span class="thumbnail-title">JPEGMAFIA</span>
           <a href="jpegmafia.html">learn more about the artist</a>
             
@@ -64,7 +64,7 @@
       <div class="detail-image-container">
         <div class="detail-image-frame" data-image-role="frame">
           <span class="detail-image-title" data-image-role="title"></span>
-          <img class="detail-image" data-image-role="target" src="img/DaftPunk.jpg" alt="">
+          <img class="detail-image" data-image-role="target" src="img/beck.jpg" alt="">
           <span class="detail-image-description"></span>
         </div>
       </div>
