changed some stuff

--- a/bladee.html
+++ b/bladee.html
@@ -17,7 +17,10 @@
       <ul class="thumbnail-list">
         <li class="thumbnail-item">
           <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/youngbladee.jpg"
-          data-image-description="fgdfgdfgkjdgh;kdgj">
+          data-image-description="Benjamin Reichwald, also known as Bladee is a rapper from Stockholm, Sweden. He began releasing music in 2012
+          and released a few singles and compliations before dropping his debut mixtape in 2014 called 'GLUEE' which made a name for himself in the
+          underground rap scene at the time. In 2016, he dropped his debut album 'Eversince'. In 2017, he released his 2nd mixtape, 'Working on Dying' 
+          which saw him work with the group of the same name.">
             <span class="thumbnail-title">History Of Bladee</span>
           </a>
         </li>
