--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main class="main-content">
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/DaftPunk.jpg"
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/beck.jpg"
         data-image-description="Music'q is a website that gives imformation about my favorite artists! 
         Please enjoy and take your time to look around!">
           <span class="thumbnail-title">Welcome to Musiqu'd!</span>
