2/4 with artist information

--- a/bladee.html
+++ b/bladee.html
@@ -20,19 +20,30 @@
           data-image-description="Benjamin Reichwald, also known as Bladee is a rapper from Stockholm, Sweden. He began releasing music in 2012
           and released a few singles and compliations before dropping his debut mixtape in 2014 called 'GLUEE' which made a name for himself in the
           underground rap scene at the time. In 2016, he dropped his debut album 'Eversince'. In 2017, he released his 2nd mixtape, 'Working on Dying' 
-          which saw him work with the group of the same name.">
+          which saw him work with the group of the same name. In 2018, he dropped his second album, 'Red Light' which had songs like 'Obedient' and 'Decay'. In that same year,
+          he released another mixtape called 'Icedancer' which has his biggest song to date, 'Be Nice 2 Me'. After 2 years, in 2020 he dropped his 3rd album 'EXETER' which had the song 
+          'LOVESTORY' with fellow collaborator Ecco2k. He also released another album '333' in 2020, having songs like 'Reality Surf' and 'Mean Girls' as the most popular songs off the album.
+          He also released a collab album with producer Mechatok in late 2020, called 'Good Luck' which was his final project in 2020, releasing 3 albums in the whole year.
+          In 2021, he released his album 'The Fool' which has probably his 2nd biggest hit, 'Hotel Breakfast'. And recently, in 2022 he dropped another collab album
+          with ecco2k, 'Crest'.">
             <span class="thumbnail-title">History Of Bladee</span>
           </a>
         </li>
         <li class="thumbnail-item">
           <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/bladeedisco.jpg"
-          data-image-description=".">
+          data-image-description="His Discography ranges from many places. He started posting songs on soundcloud before moving into other streaming services. (this could also mean he is one of the piooners of the soundcloud rap scene). He is also apart of a rap collective called 'Drain Gang' which consists of members,
+          Ecco2k, Thaiboy Digital, Yung Sherman, WhiteArmor and himself. His first mixtape released in 2014 is 'Gluee' (top left). Released in 2016 is his debut album 'Eversince' (middle). the year 2018 consists of 2 projects that he dropped, those being
+          his 2nd album 'Red Light' (top right) and 'Icedancer' (left middle). In 2019, he dropped and EP called 'Plastic Surgery' (center middle). 2020 was a big year for Bladee, dropping 3 albums in the year. first being 'EXETER' (middle right) and '333' (bottom left) 
+          and 'Good Luck' (not pictured). In 2021, he released 'The Fool' (bottom middle), and just recently in 2022, he released 'Crest', his collab album with ecco2k.">
             <span class="thumbnail-title">Discography</span>
         </li>
       </li>
       <li class="thumbnail-item">
-        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/bladeeinfluence.jpg"
-        data-image-description=".">
+        <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/bladeeartprojects.jpg"
+        data-image-description="While his achievements haven't been as big as other notrorious rappers, he is considered an influence to many 
+        modern day rappers in the underground scene along with fellow rapper Yung Lean. While Yung Lean is seen to be more influential, a lot of people appreciate
+        Bladee for having a distinct different sound from other rappers. He has also ventured into the fashion scene and even got to walk in the Alyx Studio's S/S 2019 menswear show in Paris, France.
+        He has also worked in the arts, exhibiting his first collection of paintings in London at the Residence Gallery in 2021.">
           <span class="thumbnail-title">Achievements</span>
       </li>
             </a>
