--- a/tylerthecreator.html
+++ b/tylerthecreator.html
@@ -17,13 +17,21 @@
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/earlytylerthecreator.jpg"
-        data-image-description="fgdfgdfgkjdgh;kdgj">
+        data-image-description="Tyler Okonma also known as Tyler, the Creator is a rapper who started his career in 2009 and is also apart of the famous rap collective
+        Odd Future. He released his first project, a mixtape 'Bastard' in 2009. His debut album 'Goblin' was released in 2011. Those two albums had been controversial as
+        it contained insentitive lyrics. While his earlier work contained more of a horror-core, gritty feeling, in 2013, he moved into a more Alternative style of hip-hop with his release of 
+        'Wolf'. Wolf saw him artistically change from his previous work and his next album, 'Cherry Bomb' released in 2015 saw his style move into a more melody-focused and jazz infused style of sounds.
+        As his music style was changing, so was his popularity. by the time his 2017 album 'Flower Boy' was released he had a peak of popularity and his album was nominated for a grammy. In 2019, he released his best album to date
+        'IGOR', which had receive positive praise for being something that Tyler got out of his comfort zone to do. It also gained him a grammy nomination and a grammy win.
+        In 2021, he released his 6th studio album, 'CALL ME IF YOU GET LOST', which received critical praise and also went back to tylers old roots whilist keeping his new style alive at the same time. His album was also nominated for a grammy
+        and won in the category, 'best rap album' of 2021.">
           <span class="thumbnail-title">History Of Tyler, the Creator</span>
         </a>
       </li>
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/tylerthecralbums.jpg"
-        data-image-description=".">
+        data-image-description="In the span of 13 years, he has released 7 projects. 1 being a mixtape while the other 6 being full albums. 
+        Goblin was released in 2011, which had the infamous hit 'Yonkers'.  ">
           <span class="thumbnail-title">Discography</span>
       </li>
     </li>
