--- a/tylerthecreator.html
+++ b/tylerthecreator.html
@@ -31,13 +31,18 @@
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/tylerthecralbums.jpg"
         data-image-description="In the span of 13 years, he has released 7 projects. 1 being a mixtape while the other 6 being full albums. 
-        Goblin was released in 2011, which had the infamous hit 'Yonkers'.  ">
+        Goblin was released in 2011, which had the infamous hit 'Yonkers'. The cover also has Buffalo Bill on the cover, a famous buffalo killer. In 2013, he released his album 'Wolf'. Which got a cover change
+        in light of his newly released album. That also goes for his 2015 album 'Cherry Bomb' which got a cover change as well. His next album, released in 2019 is 'IGOR', and his newest album 
+        was released in 2021, named 'CALL ME IF YOU GET LOST', and the cover for that was largely inspired by one of his influencers, rapper ODB.">
           <span class="thumbnail-title">Discography</span>
       </li>
     </li>
     <li class="thumbnail-item">
       <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/tylergrammys.jpg"
-      data-image-description=".">
+      data-image-description="Tyler, the Creator has done many things to be regarded as one of the best musicians and rappers in the todays world.
+      He has inspired artists such as Billie Ellish, Lil Nas X, Kevin Abstract (BROCKHAMPTON) and Juice Wrld has cited Tyler to be an artist they're greatly inspired by.
+      He also owns a clothing brand, called 'Golfwang'. His biggest achievements though are in his music career. Throughout his career he has been nomninated to 36 awards, winning 10 of those times.
+      Winning 3 grammys which are considered his biggest achievements, both artistically and personally.">
         <span class="thumbnail-title">Achievements</span>
     </li>
           </a>
