--- a/fishmans.html
+++ b/fishmans.html
@@ -17,19 +17,34 @@
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/earlyfishmans.jpg"
-        data-image-description="fgdfgdfgkjdgh;kdgj">
+        data-image-description="Fishmans are as japanese band that was formed in 1987 by Shinji Sato (vocals and guitar), Kin-Ichi Motegi (drums, sampler),
+        and Kensuke Ojima (guitar). They are known for their psychadelic sound and Shinji Sato's vocals, as well as their rythmic style of drum and guitar. 
+        They were signed to Media Remoras and also gained a new member, keyboardist Hakase-Sun. Their first album 'Chappie Don't Cry' was released in 1991. Their first album had reggae-like influenced sounds which marked
+        a staple in their sound for the rest of their history. In 1992, they released their second album, 'Master King George' which featured a more jazz rock influence and poppier sound whilist keeping their staple sound as well.
+        Songs like 'Nantteno' and 'Tayorinai Tenshi' are considered classics from that album. In 1993, they released 'Neo Yankees' Holiday', which had their first breakout hit and radio song 'Ikereta Baby' and also had another hit caleld 'Smilin' Days, Summer Holiday'. 
+        That album had cemented their dub style they had introduced in their 2nd and 3rd album. In 1994, they released their 4th album 'Orange' which saw them take a more funk rock approach. Hit songs like 'Melody' and 'Waseurchau Hitotoki' were included in it. The song
+        'Kaerimichi' on the album alludes to a new sound they would explore (dream pop). In 1996, Fishmans would release their 5th album, 'Kuchuu Camp', which saw them work in a stripped down way and having less of a lush background in their music. A hit that is their most popular song to this day
+        was 'Night Cruising' off Kuchuu Camp. Later in that year, they made their most iconic song to date, 'Long Season'. Which was a song that was 35 minutes long and was composed with 5 parts. Both that single and album serve as their shift to the new dream pop sound and would allude to the sound of their next albums as well. 
+        They released their final album a year later, 'Uchu Nippon Setagaya' was released in 1997. This album saw them experiment in more ambient pop sounds whilist
+        keeping up with their dream pop sound. Some Standout songs include, 'Magic Love', 'Walking in the Rhythm' and 'Weather Report'. Their final ever work though would be the night of December 28th in 1998. They played many of their acclaimed best songs and a preformance of Long Season. Fishmans last concert was recorded and
+        made into an album '98.12.28 Otokotachi No Wakare'. A couple months after the release, frontman Shinji Sato died on March 15, 1999 which would mark the ending of Fishmans.">
           <span class="thumbnail-title">History Of Fishmans</span>
         </a>
       </li>
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/fishmansdiscogs.jpg"
-        data-image-description=".">
+        data-image-description="Fishmans has a huge diverse discography reaching from 1992 to 1998, whether it be studio albums, live albums or singles. Their discography starts out with 'Chappie Don't Cry' (top left) released in 1991, then released 'King Master George' (top middle) in 1992. 
+        After 2 years, they released 'Orange' (top right) in 1994 as well as a compliation of singles from 1991-1994 (middle left) and 'Oh! Mountain' (middle center)  which had songs from 'Orange' that were reworked along with new songs. In 1996, they released 'Long Season' (middle right) which is a song composed of 5 parts. The whole thing spans 
+        35 minutes, and is regarded as their best work. Also in 1996 they released 'Kuchuu Camp' (bottom right). In 1997 they released 'Uchu Nippon Setagaya' which would be their last studio album. In 1998 they would release '98.12.28 Otokotachi No Wakare' and is also regarded as one of the best live albums ever to many music fans around the world. 
+        And although they have remained relatively underground during the time the band was around, as the internet grew and grew, many started gather a cult follwing around them and their diverse discography.">
           <span class="thumbnail-title">Discography</span>
       </li>
     </li>
     <li class="thumbnail-item">
       <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/fishmansinfluence.jpg"
-      data-image-description=".">
+      data-image-description="While they have had a relatively underground following until the past 2 decades, you could say their biggest achievement is the international fanbase they have grown. After the death of Shinji Sato
+      in 1999, the popularity of the band started to see more growth. They are also apart of the top 100 influential music acts in the no. 98 place. Many reunions after their disbandment happened to tribute Fishmans. Only in 2018 was their music released
+      on streaming services as well after help from a growing fanbase in both Europe and North America.">
         <span class="thumbnail-title">Achievements</span>
     </li>
           </a>
