--- a/jpegmafia.html
+++ b/jpegmafia.html
@@ -17,19 +17,30 @@
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/earlyjpeg.jpg"
-        data-image-description="fgdfgdfgkjdgh;kdgj">
+        data-image-description="Barrington DeVaughn Hendricks, also known as rapper JPEGMAFIA/Devon Hendryx. He started gaining an interest with music at age 15 and began producing and learning how to sample 
+        music as well around that time. He started releasing music while in the military in Japan, first under the name Devon Hendryx in where he released  'Dreamcast Summer Songs' in 2009, which is regarded as a predecessor to another growing genre at the time, 
+        vaporwave. He also released his work 'The Ghost~Pop Tape in 2013. In 2015, he started going by the name JPEGMAFIA and released his first mixtape 'Communist Slow Jams' in April.
+        The following year he released first album 'Black Ben Carson' which is known for its gritty, experimental and harsh rap production and lyrics. In 2018, he released his 2nd album 'Veteran' which is known as his most experimental album to date and received
+        positive reviews and claims for its creativity within the experimental hip-hop scene. In 2019 he released his 3rd album 'All My Heroes Are Cornballs' which had 93 songs in hand but JPEGMAFIA ultimately swindled it down to 18 songs. His second biggest hit 'Jesus Forgive Forgive Me, I Am A Thot' comes from that album.
+        It was also his first album to be in the charts as well. In 2020, he released his an ep called 'EP!' and 'EP! 2'. In 2021, he released 'LP!' which was his 4th album and was also praised a lot in the music community. He has also produced for many rappers such as Denzel Curry. More recently he has also said he is working on a 
+        collaborative tape with fellow rapper Danny Brown in 2022.">
           <span class="thumbnail-title">History Of JPEGMAFIA</span>
         </a>
       </li>
       <li class="thumbnail-item">
         <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/jpegmafiadiscog.jpg"
-        data-image-description=".">
+        data-image-description="JPEGMAFIA's discography is also very diverse, mainly making experimental hip-hop music but also venturing trap music, r&b, ambient pop and noise rap. 
+        His first release was 'Dreamcast Summer Songs' (top right) which was in 2009 under the name of Devon Hendryx. His second release was also under Devon Hendryx, releasing 'The Ghost~Pop Tape' (top middle) in 2013.
+        Then in 2015, after switching names to JPEGMAFIA, he released his mixtape 'Communist Slow Jams' (top right) in 2015. His first album under the name JPEGMAFIA, 'Black Ben Carson' (middle left) was released in 2016. His 2nd studio album
+        'All My Heroes Are Cornballs' (middle center) was released the following year in 2019. He then released 'EP!' (bottom left) and 'EP2' (bottom middle) in 2020 before releasing 'LP!' (bottom right) in 2021. He is also known to have a lot more music, but mainly unreleased. ">
           <span class="thumbnail-title">Discography</span>
       </li>
     </li>
     <li class="thumbnail-item">
       <a href="#" data-image-role="trigger" data-image-title="" data-image-url="img/jpegmafiainfluence.jpg"
-      data-image-description=".">
+      data-image-description="JPEGMAFIA has been in a the rap game for a while, and although underground for much of his career, he has for sure grown an underground cult following that has a little peak within the mainstream.
+      He has also started a vlog series on youtube called 'How to Build A Relationship' that his him talking to his friends and other musicians. The episodes consist of him giving previews of unreleased songs produced by himself. He has also 
+      been on the Eric Andre Show, where he competed with other artists attempting to freestyle and dodging various attacks. He has also certainly left a mark and growing influence on many online communities, as his fanbase continues to grow.">
         <span class="thumbnail-title">Achievements</span>
     </li>
           </a>
